# adjust-cli

./: .editorconfig  .gitignore  .mypy.ini  README.md  placeholders.json  pyproject.toml
.github/workflows/: build.yml
adjust/: snapshot.py  utils.py
adjust/api/: __init__.py  api.py  model.py
adjust/cli/: __init__.py  cli.py  types.py
tests/: conftest.py  test_api.py  test_cli.py  test_snapshot.py  utils.py
